tests/negative/semantics/type_mismatch.stream
let x = 10
let y = "Hello"
print(x + y)